# evals

./: README.md  pyproject.toml  requirements.txt  sweep.yaml
.github/workflows/: pylint.yml  pytest.yml
src/: api.py  cnn.py  main.py  test_main.py  train.py  trainer.py
tests/: test_main.py
