[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "your-project-description"
authors = ["your-name <your-email>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.68.0"
uvicorn = "0.15.0"
torch = "*"
torchvision = "*"
pillow = "*"
pylint = "*"
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

